--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=KinoXP
+
+spring.datasource.url=${DB_URL}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME}
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+#spring.jpa.hibernate.ddl-auto=update
