folder for backend and frontend

--- a/KinoXPBackend/pom.xml
+++ b/KinoXPBackend/pom.xml
@@ -66,6 +66,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.5.6</version>
+                <configuration>
+                    <mainClass>org.example.kinoxp.KinoXpApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
