--- a/KinoXPBackend/src/main/resources/application.properties
+++ b/KinoXPBackend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=KinoXP
 
-spring.datasource.url=${DB_URL}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.username=${DB_USERNAME}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.username=${DB_USERNAME}
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
