--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 HELP.md
 target/
-KinoXPBackend/.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+.mvn/wrapper/maven-wrapper.jar
+!src/main/**/target/
+!src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -26,8 +26,8 @@ KinoXPBackend/.mvn/wrapper/maven-wrapper.jar
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+!src/main/**/build/
+!src/test/**/build/
 
 ### VS Code ###
 .vscode/
