--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,13 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.6.3</version>
         </dependency>
-        <!-- Så vi kan bruge de forskellige annoteringer som @NotNull -->
+        <!-- Allow us to use different annotations @NotNull -->
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
-        <!-- Hibernate skal vide, at vi bruger en validator -->
+        <!-- Hibernate needs to know which validator to use -->
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
