--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 spring.application.name=KinoXP
 
-spring.datasource.url=${DB_URL}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.username=${DB_USERNAME}
+tmdb.api-key=${TMDB_KEY}
+
+#spring.datasource.url=${DB_URL}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.username=${DB_USERNAME}
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.open-in-view=true
+
+spring.datasource.url=jdbc:h2:mem:KinoXP
+
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.username=sa
+
+spring.datasource.password=
