--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
 spring.application.name=KinoXP
 
-spring.datasource.url=${DB_URL}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.username=${DB_USERNAME}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.username=${DB_USERNAME}
+
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+
+# MySQL connection
+spring.datasource.url=jdbc:mysql://localhost:3306/kinoxp?useSSL=false&serverTimezone=UTC
+## MySQL connection
+#spring.datasource.url=jdbc:mysql://localhost:3306/kinoxp?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=your_mysql_password
+spring.datasource.username=root
+spring.datasource.password=H3ct0rH3ct0r
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
