progress on annotations 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=KinoXP
 
-tmdb.api-key=${TMDB_KEY}
+#tmdb.api-key=${TMDB_KEY}
 
 #spring.datasource.url=${DB_URL}
 #spring.datasource.password=${DB_PASSWORD}
@@ -25,14 +25,18 @@ spring.datasource.password=H3ct0rH3ct0r
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
+
+
+# Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.open-in-view=true
 
-spring.datasource.url=jdbc:h2:mem:KinoXP
+#spring.datasource.url=jdbc:h2:mem:KinoXP
 
 spring.datasource.driverClassName=org.h2.Driver
 
-spring.datasource.username=sa
+#spring.datasource.username=sa
 
-spring.datasource.password=
+#spring.datasource.password=
