--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.open-in-view=true
 
