--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
 spring.application.name=KinoXP
-spring.jpa.defer-datasource-initialization=true
+spring.profiles.active = prod
+#spring.jpa.defer-datasource-initialization=true
 
-tmdb.api-key=${TMDB_KEY}
+#tmdb.api-key=${TMDB_KEY}
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.datasource.url=${DB_URL}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.username=${DB_USERNAME}
+#spring.jpa.open-in-view=true
 
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.open-in-view=true
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
