--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=KinoXP
 spring.profiles.active = prod
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 
-#tmdb.api-key=${TMDB_KEY}
-#spring.jpa.show-sql=true
-#spring.h2.console.enabled=true
+tmdb.api-key=${TMDB_KEY}
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.jpa.open-in-view=true
+spring.jpa.open-in-view=true
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
