--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.defer-datasource-initialization=true
 tmdb.api-key=${TMDB_KEY}
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.open-in-view=true
 
