--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.defer-datasource-initialization=true
 
 tmdb.api-key=${TMDB_KEY}
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
 
